# mem

./: .gitignore  ARCHITECTURE.md  LICENSE  PHILOSOPHY.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
command-groups/databases/: postgres-debug.json  redis-ops.json
command-groups/devops/: docker-cleanup.json  incident-response.json  k8s-debug.json
command-groups/git/: cleanup.json  forensics.json
command-groups/networking/: dns-debug.json  network-debug.json
command-groups/performance/: system-profile.json
command-groups/security/: headers-audit.json  recon.json  ssl-audit.json
docs/decisions/: 001-jsonl-over-sqlite.md  002-apple-fm-sdk-for-patterns.md  003-no-daemon.md  004-per-repo-jsonl.md
hooks/: mem.bash  mem.fish  mem.zsh
src/mem/: __init__.py  _generable.py  capture.py  cli.py  groups.py  models.py  patterns.py  search.py  storage.py  variables.py
tests/: conftest.py  test_capture.py  test_groups.py  test_patterns.py  test_search.py  test_storage.py
