[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem-cli"
version = "0.1.0"
description = "Privacy-first CLI that turns shell history into searchable memory"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click",
    "rich",
    "pydantic",
]

[project.optional-dependencies]
ai = ["apple-fm-sdk"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
mem = "mem.cli:cli"

[project.urls]
GitHub = "https://github.com/matinsaurralde/mem"

[tool.hatch.build.targets.wheel]
packages = ["src/mem"]

[tool.hatch.build.targets.editable]
packages = ["src/mem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
