[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-mem"
version = "0.3.5"
description = "Privacy-first CLI that turns shell history into searchable memory"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Matias Insaurralde" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
]
dependencies = [
    "click",
    "rich",
    "pydantic",
]

[project.optional-dependencies]
ai = ["apple-fm-sdk"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
mem = "mem.cli:cli"

[project.urls]
GitHub = "https://github.com/matinsaurralde/mem"

[tool.hatch.build.targets.wheel]
packages = ["src/mem"]

[tool.hatch.build.targets.editable]
packages = ["src/mem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
